--- a/app/views/landing/_welcome.html.erb
+++ b/app/views/landing/_welcome.html.erb
@@ -1,9 +1,21 @@
+<%#
+  Mensagem de bem-vindo.
+%>
+
+<%# Imagem de fundo. %>
 <div class="landing-welcome">
   <div class="container">
     <div class="row">
-      <div class="span6">
-        <h2 class="landing-welcome-title">Bem vindo(a)</h2>
-        <h3 class="landing-welcome-message">O Redu é uma plataforma para ensino com tecnologia, que permite criar, compartilhar e discutir conteúdos das mais diversas formas, estimulando a aprendizagem, colaboração e diversão.</h3>
+      <div class="offset3 span10">
+        <%# Luz de fundo. %>
+        <div class="landing-welcome-light sprite-light-welcome">
+          <div class="row">
+            <div class="offset2 span6">
+              <h2 class="landing-welcome-title">Bem vindo(a)</h2>
+              <h3 class="landing-welcome-message">O Redu é um serviço para aprendizagem online, que tem nas interações sociais o estímulo à colaboração e diversão. Aqui, você pode criar, oferecer ou apenas participar de Cursos gratuitamente.</h3>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
