--- a/app/assets/stylesheets/landing/_filters.scss
+++ b/app/assets/stylesheets/landing/_filters.scss
@@ -2,9 +2,10 @@
 // Área dos filtros.
 // ==========================================================================
 
+
 .landing-filters {
   text-align: center;
-  padding: 20px 0 10px;
+  padding: 10px 0;
 
   .filters { display: inline-block; }
 
