--- a/app/views/landing/_filters.html.erb
+++ b/app/views/landing/_filters.html.erb
@@ -1,9 +1,14 @@
+<%#
+  Filtros da navegaçao.
+%>
+
 <div class="landing-filters">
   <div class="filters">
-    <a class="filter landing-scroll" href="#segmentos">Segmentos</a>
+    <a class="filter landing-scroll" href="#como-funciona">Como Funciona?</a>
+    <a class="filter landing-scroll" href="#quanto-custa">Quanto Custa?</a>
     <a class="filter landing-scroll" href="#vantagens">Vantagens</a>
     <a class="filter landing-scroll" href="#funcionalidades">Funcionalidades</a>
-    <a class="filter landing-scroll" href="#planos">Planos</a>
+    <a class="filter landing-scroll" href="#mais-servicos">Mais Serviços</a>
     <a class="filter landing-scroll" href="#parceiros">Parceiros</a>
   </div>
 </div>
