--- a/app/views/base/site_index.html.erb
+++ b/app/views/base/site_index.html.erb
@@ -2,19 +2,15 @@
   <%= javascript_include_tag "landing" %>
 <% end %>
 
-<%= render :partial => "landing/welcome" %>
+<%= render "landing/welcome" %>
 <div class="container">
   <div class="landing-navigation content-body">
-    <%= render :partial => "landing/filters" %>
-    <hr id="segmentos" class="list-separator"/>
-    <%= render :partial => "landing/segments" %>
+    <%= render "landing/filters" %>
     <hr id="vantagens" class="list-separator"/>
-    <%= render :partial => "landing/advantages" %>
+    <%= render "landing/advantages" %>
     <hr id="funcionalidades" class="list-separator"/>
-    <%= render :partial => "landing/functionalities" %>
-    <hr id="planos"  class="list-separator"/>
-    <%= render :partial => "landing/plans" %>
+    <%= render "landing/functionalities" %>
     <hr id="parceiros" class="list-separator"/>
-    <%= render :partial => "landing/partners" %>
+    <%= render "landing/partners" %>
   </div>
 </div>
