--- a/app/views/landing/_advantages.html.erb
+++ b/app/views/landing/_advantages.html.erb
@@ -1,49 +1,45 @@
+<%#
+  Vantagens.
+%>
+
 <div class="landing-advantages">
   <h2 class="landing-navigation-title">Vantagens</h2>
   <span class="type-user student">
-      <span class="button-user">
-             <%= image_tag "landing/button-student.png",
-                :alt => "Aluno",
-                :title => "Aluno"
-            %>
-            <h3>Aluno</h3>
-      </span>
-      <p class="call"> Comunique-se melhor com seus professores e colegas de curso;</p>
-      <p class="call"> Acesse as aulas, exercícios e as discussões das disciplinas</p>
+    <div class="button-user">
+      <%= image_tag "landing/button-student.png", alt: "Aluno",
+        title: "Aluno" %>
+      <h3>Aluno</h3>
+    </div>
+    <p class="call"> Comunique-se melhor com seus professores e colegas de curso;</p>
+    <p class="call"> Acesse as aulas, exercícios e as discussões das disciplinas</p>
   </span>
   <span class="type-user teacher">
-      <span class="button-user">
-           <%= image_tag "landing/button-teacher.png",
-                :alt => "Professor",
-                :title => "Professor"
-            %>
-             <h3>Prof.</h3>
-             <span class="legend">Professor</span>
-      </span>
-      <p class="call"> Crie novos métodos e técnicas de ensino e economize tempo; </p>
-      <p class="call"> Planeje, compartilhe e avalie o ensino e a aprendizagem.</p>
+    <div class="button-user">
+      <%= image_tag "landing/button-teacher.png", alt: "Professor",
+        title: "Professor" %>
+      <h3>Prof.</h3>
+      <span class="legend">Professor</span>
+    </div>
+    <p class="call"> Crie novos métodos e técnicas de ensino e economize tempo; </p>
+    <p class="call"> Planeje, compartilhe e avalie o ensino e a aprendizagem.</p>
   </span>
   <span class="type-user gestor">
-      <span class="button-user">
-             <%= image_tag "landing/button-manager.png",
-                :alt => "Gestor",
-                :title => "Gestor"
-            %>
-            <h3>Gestor</h3>
-      </span>
-      <p class="call"> Utilize uma tecnologia que faz parte da cultura do público jovem; </p>
-      <p class="call"> Acompanhe as atividades de seus professores e alunos.</p>
+    <div class="button-user">
+      <%= image_tag "landing/button-manager.png", alt: "Gestor",
+        title: "Gestor" %>
+      <h3>Gestor</h3>
+    </div>
+    <p class="call"> Utilize uma tecnologia que faz parte da cultura do público jovem; </p>
+    <p class="call"> Acompanhe as atividades de seus professores e alunos.</p>
   </span>
   <span class="type-user developer">
-      <span class="button-user">
-             <%= image_tag "landing/button-developer.png",
-                :alt => "Desenvolvedor",
-                :title => "Desenvolvedor"
-              %>
-             <h3>Dev.</h3>
-             <span class="legend">Desenvolvedor</span>
-      </span>
-      <p class="call"> Integre facilmente o Redu com outras soluções de software;</p>
-      <p class="call"> Extenda a plataforma às suas necessidades específicas.</p>
+    <div class="button-user">
+      <%= image_tag "landing/button-developer.png", alt: "Desenvolvedor",
+        title: "Desenvolvedor" %>
+      <h3>Dev.</h3>
+      <span class="legend">Desenvolvedor</span>
+    </div>
+    <p class="call"> Integre facilmente o Redu com outras soluções de software;</p>
+    <p class="call"> Extenda a plataforma às suas necessidades específicas.</p>
   </span>
 </div>
