--- a/app/views/landing/_functionalities.html.erb
+++ b/app/views/landing/_functionalities.html.erb
@@ -1,18 +1,22 @@
+<%#
+  Funcionalidades.
+%>
+
 <div class="landing-functionalities">
   <h2 class="landing-navigation-title">Funcionalidades</h2>
-  <%= render :partial => "landing/social_network_n_chat" %>
+  <%= render "landing/social_network_n_chat" %>
   <hr>
-  <%= render :partial => "landing/discussion_wall" %>
+  <%= render "landing/discussion_wall" %>
   <hr>
-  <%= render :partial => "landing/multimedia_classes" %>
+  <%= render "landing/multimedia_classes" %>
   <hr>
-  <%= render :partial => "landing/basic_reports" %>
+  <%= render "landing/basic_reports" %>
   <hr>
-  <%= render :partial => "landing/management_n_support" %>
+  <%= render "landing/management_n_support" %>
   <hr>
-  <%= render :partial => "landing/oer" %>
+  <%= render "landing/oer" %>
   <hr>
-  <%= render :partial => "landing/api" %>
+  <%= render "landing/api" %>
   <hr>
-  <%= render :partial => "landing/others" %>
+  <%= render "landing/others" %>
 </div>
