--- a/app/views/landing/_partners.html.erb
+++ b/app/views/landing/_partners.html.erb
@@ -1,42 +1,52 @@
+<%#
+  Parceiros.
+%>
+
 <div class="landing-partners">
   <h2 class="landing-navigation-title">Parceiros</h2>
-  <%= render :partial => "landing/visual_class" %>
+  <%= render "landing/visual_class" %>
   <div class="partners">
     <%= link_to "Academia para o Desenvolvimento da Educação",
       "http://www.adebrasil.org.br/",
-      :class => "partner sprite-partner-ade text-replacement",
-      :title => "Academia para o Desenvolvimento da Educação",
-      :alt => "Academia para o Desenvolvimento da Educação"
+      class: "partner sprite-partner-ade text-replacement",
+      title: "Academia para o Desenvolvimento da Educação",
+      alt: "Academia para o Desenvolvimento da Educação",
+      target: "_blank"
     %>
     <%= link_to "Universidade Federal de Pernambuco",
       "http://www.ufpe.br/",
-      :class => "partner sprite-partner-ufpe text-replacement",
-      :title => "Universidade Federal de Pernambuco",
-      :alt => "Universidade Federal de Pernambuco"
+      class: "partner sprite-partner-ufpe text-replacement",
+      title: "Universidade Federal de Pernambuco",
+      alt: "Universidade Federal de Pernambuco",
+      target: "_blank"
     %>
     <%= link_to "Faculdade de Igarassu",
       "http://www.facig-pe.edu.br/",
-      :class => "partner sprite-partner-facig text-replacement",
-      :title => "Faculdade de Igarassu",
-      :alt => "Faculdade de Igarassu"
+      class: "partner sprite-partner-facig text-replacement",
+      title: "Faculdade de Igarassu",
+      alt: "Faculdade de Igarassu",
+      target: "_blank"
     %>
     <%= link_to "Escola Técnica Regional",
       "http://etrpe.com.br/",
-      :class => "partner sprite-partner-etr text-replacement",
-      :title => "Escola Técnica Regional",
-      :alt => "Escola Técnica Regional"
+      class: "partner sprite-partner-etr text-replacement",
+      title: "Escola Técnica Regional",
+      alt: "Escola Técnica Regional",
+      target: "_blank"
     %>
     <%= link_to "Universidade Federal do Vale do São Francisco",
       "http://www.univasf.edu.br/",
-      :class => "partner sprite-partner-univasf text-replacement",
-      :title => "Universidade Federal do Vale do São Francisco",
-      :alt => "Universidade Federal do Vale do São Francisco"
+      class: "partner sprite-partner-univasf text-replacement",
+      title: "Universidade Federal do Vale do São Francisco",
+      alt: "Universidade Federal do Vale do São Francisco",
+      target: "_blank"
     %>
     <%= link_to "Faculdade Franssinetti do Recife",
       "http://www.fafire.br/",
-      :class => "partner sprite-partner-fafire text-replacement",
-      :title => "Faculdade Franssinetti do Recife",
-      :alt => "Faculdade Franssinetti do Recife"
+      class: "partner sprite-partner-fafire text-replacement",
+      title: "Faculdade Franssinetti do Recife",
+      alt: "Faculdade Franssinetti do Recife",
+      target: "_blank"
     %>
   </div>
 </div>
