--- a/app/views/landing/_discussion_wall.html.erb
+++ b/app/views/landing/_discussion_wall.html.erb
@@ -1,9 +1,13 @@
-<div class="landing-functionality landing-discussion-wall">
-  <span class="landing-discussion-wall-icon sprite-icon-wall text-replacement" title="Mural de Discussão">Mural de Discussão (ícone)</span>
-  <span class="landing-discussion-wall-background sprite-background-wall text-replacement" title="Mural de Discussão">Mural de Discussão (fundo)</span>
+<%#
+  Mural de Discussão.
+%>
+
+<div class="landing-discussion-wall landing-navigation-message-hover">
+  <span class="landing-discussion-wall-background sprite-background-wall text-replacement">Mural de Discussão (fundo)</span>
   <div class="landing-discussion-wall-content">
     <h3 class="landing-navigation-subtitle">Mural de Discussão</h3>
-    <h4>Estimule debates e tire dúvidas sobre suas aulas com alunos e professores.</h4>
-    <p>Estruture diálogos mais ricos e bem elaborados, peça ajuda aos seus colegas e aprenda de um jeito dinâmico e divertido.</p>
+    <h4 class="landing-navigation-legend">Estimule debates e tire dúvidas sobre suas aulas com alunos e professores.</h4>
+    <p class="landing-navigation-message">Estruture diálogos mais ricos e bem elaborados, peça ajuda aos seus colegas e aprenda de um jeito dinâmico e divertido.</p>
   </div>
+  <span class="landing-discussion-wall-icon sprite-icon-wall text-replacement" title="Mural de Discussão">Mural de Discussão (ícone)</span>
 </div>
