--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -27,7 +27,7 @@
 // Estilos da área de funcionalidades.
 @import "landing/functionalities";
 // Estilos da área de rede social & chat.
-@import "landing/social-network-&-chat";
+@import "landing/social-network-n-chat";
 // Estilos da área de mural de discussão.
 @import "landing/discussion-wall";
 // Estilos da área de aulas multimídia.
