--- a/app/views/landing/_oer.html.erb
+++ b/app/views/landing/_oer.html.erb
@@ -1,14 +1,18 @@
+<%#
+  Recursos Educacionais Abertos.
+%>
+
 <div class="landing-functionality landing-oer-outer-wrapper">
   <div class="row">
     <div class="offset1 span4">
-      <div class="landing-oer-title">
-        <h3 class="landing-navigation-subtitle"><%= link_to "Recursos Educacionais Abertos", Redu::Application.config.redu_services[:apps][:url] %></h3>
-      </div>
+      <h3 class="landing-oer-title landing-navigation-subtitle">
+        <%= link_to "Recursos Educacionais Abertos", Redu::Application.config.redu_services[:apps][:url] %>
+      </h3>
     </div>
     <div class="span6">
       <div class="landing-oer-description">
-        <h4>Artefatos interativos de todo o mundo  que complementam o aprendizado. E o melhor: são gratuitos.</h4>
-        <p>São materiais de ensino e aprendizagem que estão sob domínio público, e podem ser utilizados em qualquer disciplina.</p>
+        <h4 class="landing-navigation-legend">Artefatos interativos de todo o mundo  que complementam o aprendizado. E o melhor: são gratuitos.</h4>
+        <p class="landing-navigation-message">São materiais de ensino e aprendizagem que estão sob domínio público, e podem ser utilizados em qualquer disciplina.</p>
       </div>
     </div>
     <%= link_to "Recursos Educacionais Abertos",
