--- a/app/views/landing/_functionalities.html.erb
+++ b/app/views/landing/_functionalities.html.erb
@@ -5,18 +5,18 @@
 <div class="landing-functionalities">
   <h2 class="landing-navigation-title">Funcionalidades</h2>
   <%= render "landing/social_network_n_chat" %>
-  <hr>
+  <hr class="landing-functionalities-separator">
   <%= render "landing/discussion_wall" %>
-  <hr>
+  <hr class="landing-functionalities-separator">
   <%= render "landing/multimedia_classes" %>
-  <hr>
+  <hr class="landing-functionalities-separator">
   <%= render "landing/basic_reports" %>
-  <hr>
+  <hr class="landing-functionalities-separator">
   <%= render "landing/management_n_support" %>
-  <hr>
+  <hr class="landing-functionalities-separator">
   <%= render "landing/oer" %>
-  <hr>
+  <hr class="landing-functionalities-separator">
   <%= render "landing/api" %>
-  <hr>
+  <hr class="landing-functionalities-separator">
   <%= render "landing/others" %>
 </div>
