--- a/app/assets/stylesheets/landing/_navigation.scss
+++ b/app/assets/stylesheets/landing/_navigation.scss
@@ -2,25 +2,33 @@
 // Área da navegação.
 // ==========================================================================
 
+
 .landing-navigation {
   @include box-shadow(0 1px 10px 1px rgba(0, 0, 0, 0.5));
   margin: -90px 0 40px;
-
-  h4 { color: $gray6; }
 }
 
-.landing-navigation-item {
-  &:first-child { @include box-shadow(0 -1px 0 $white inset); }
+// Títulos da área de navegação.
+.landing-navigation-title {
+  @include text-shadow(0 1px 0 $landing-gray);
+  @include heading(1);
+  font-weight: 500;
+  display: block;
+  color: $gray3;
+}
 
-  & +
-  & {
-    border-top: 1px solid $gray3;
+// Sub-títulos da área de navegação.
+.landing-navigation-subtitle { @include heading(2); }
 
-    $box-shadow:
-      0 1px 0 $white inset
-    , 0 -1px 0 $white inset;
-    @include box-shadow($box-shadow);
-  }
+// Legendas da área de navegação.
+.landing-navigation-legend {
+  @include heading(4);
+  color: $gray6;
+}
 
-  &:last-child { @include box-shadow(0 1px 0 $white inset); }
+// Parágrafos da área de navegação.
+.landing-navigation-message {
+  color: $landing-gray;
+
+  .landing-navigation-message-hover:hover & { color: $gray6; }
 }
