Adiciona a seção 'Como Funciona?'.

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -22,6 +22,8 @@
 @import "landing/navigation";
 // Estilos da área dos filtros.
 @import "landing/filters";
+// Estilos da área de "Como Funciona?".
+@import "landing/how";
 // Estilos da área de vantagens.
 @import "landing/advantages";
 // Estilos da área de funcionalidades.
