--- a/app/views/base/site_index.html.erb
+++ b/app/views/base/site_index.html.erb
@@ -6,6 +6,8 @@
 <div class="container">
   <div class="landing-navigation content-body">
     <%= render "landing/filters" %>
+    <hr id="como-funciona" class="list-separator"/>
+    <%= render "landing/how" %>
     <hr id="vantagens" class="list-separator"/>
     <%= render "landing/advantages" %>
     <hr id="funcionalidades" class="list-separator"/>
