--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -64,7 +64,7 @@
           </li>
           <li>
             <%= link_to "Blog",
-              "http://blog.redu.com.br/",
+              Redu::Application.config.redu_services[:dev][:blog],
               :title => "Blog"
             %>
           </li>
