Adiciona a seção 'Mais Serviços'.

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -34,20 +34,22 @@
 @import "landing/discussion-wall";
 // Estilos da área de aulas multimídia.
 @import "landing/multimedia-classes";
+// Estilos da área de Relatórios Básicos.
+@import "landing/basic-reports";
+// Estilos da área de gerenciamento e suporte.
+@import "landing/management-support";
 // Estilos da área de Recursos Educacionais Abertos.
 @import "landing/oer";
 // Estilos da área de serviços e aplicações integradas.
 @import "landing/api";
 // Estilos da área de mensagens particulares, currículo e mobilidade.
 @import "landing/others";
+// Estilos da área de "Mais Serviços".
+@import "landing/services";
 // Estilos da área de parceiros.
 @import "landing/partners";
 // Estilos da área de Visual Class.
 @import "landing/visual-class";
-// Estilos da área de Relatórios Básicos.
-@import "landing/basic-reports";
-// Estilos da área de gerenciamento e suporte.
-@import "landing/management-support";
 
 // TODO: Remover depois de resolver a issue ui-compnents#15.
 .textshadow .olrk-noquirks { text-shadow: none; }
