--- a/app/views/base/site_index.html.erb
+++ b/app/views/base/site_index.html.erb
@@ -12,6 +12,8 @@
     <%= render "landing/advantages" %>
     <hr id="funcionalidades" class="list-separator"/>
     <%= render "landing/functionalities" %>
+    <hr id="mais-servicos" class="list-separator"/>
+    <%= render "landing/services" %>
     <hr id="parceiros" class="list-separator"/>
     <%= render "landing/partners" %>
   </div>
