Adiciona a seção 'Quanto Custa?'.

--- a/app/views/base/site_index.html.erb
+++ b/app/views/base/site_index.html.erb
@@ -8,6 +8,8 @@
     <%= render "landing/filters" %>
     <hr id="como-funciona" class="list-separator"/>
     <%= render "landing/how" %>
+    <hr id="custo" class="list-separator"/>
+    <%= render "landing/cost" %>
     <hr id="vantagens" class="list-separator"/>
     <%= render "landing/advantages" %>
     <hr id="funcionalidades" class="list-separator"/>
