--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -24,6 +24,8 @@
 @import "landing/filters";
 // Estilos da área de "Como Funciona?".
 @import "landing/how";
+// Estilos da área de "Quanto Custa?".
+@import "landing/cost";
 // Estilos da área de vantagens.
 @import "landing/advantages";
 // Estilos da área de funcionalidades.
