Corrige o link para o blog.

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -64,7 +64,7 @@
           </li>
           <li>
             <%= link_to "Blog",
-              Redu::Application.config.redu_services[:dev][:blog],
+              Redu::Application.config.redu_services[:blog][:url],
               :title => "Blog"
             %>
           </li>
