Adiciona o link para o pagseguro.

--- a/app/views/landing/_cost.html.erb
+++ b/app/views/landing/_cost.html.erb
@@ -6,8 +6,8 @@
   <div class="landing-cost-header clearfix">
     <h2 class="landing-navigation-title pull-left">Quanto Custa?</h2>
     <div class="landing-cost-payment pull-right clearfix">
-      <span class="landing-cost-payment-pagseguro sprite-pagseguro text-replacement pull-right">PagSeguro</span>
-      <p class="landing-navigation-message legend pull-right">Os custos são apenas para os criadores dos Ambientes. Utilizamos o PagSeguro para os pagamentos. <%= link_to "Saiba como pagar.", "#", target: "_blank" %></p>
+      <a href="https://pagseguro.uol.com.br/para_voce/como_funciona.jhtml" class="landing-cost-payment-pagseguro sprite-pagseguro text-replacement pull-right" title="Saiba como pagar com o Pagseguro">PagSeguro</a>
+      <p class="landing-navigation-message legend pull-right">Os custos são apenas para os criadores dos Ambientes. Utilizamos o PagSeguro para os pagamentos. <%= link_to "Saiba como pagar.", "https://pagseguro.uol.com.br/para_voce/como_funciona.jhtml", target: "_blank", title: "Saiba como pagar com o Pagseguro" %></p>
     </div>
   </div>
   <table class="landing-cost-table table-without-borderradius">
