Corrige a cor dos textos dos serviços.

--- a/app/assets/stylesheets/landing/_services.scss
+++ b/app/assets/stylesheets/landing/_services.scss
@@ -62,4 +62,5 @@ $landing-service-border: 1px solid $blue2;
   padding: 20px 10px 10px;
   min-height: 156px;
   border-top: $landing-service-border;
+  color: $landing-gray;
 }
