--- a/app/views/landing/_services.html.erb
+++ b/app/views/landing/_services.html.erb
@@ -15,7 +15,7 @@
           <h3 class="landing-navigation-legend landing-navigation-legend-centralize">Customização</h3>
         </div>
         <div class="landing-service-body">
-          <p class="landing-service-message">Contrate a Plataforma de Educação a Distância com a sua marca, identidade visual e endereço eletrônico dentro do portal de sua instituição. <%= link_to "Fale conosco.", contact_path %></p>
+          <p class="landing-service-message">Contrate a Plataforma de Educação a Distância com a sua marca, identidade visual e endereço eletrônico dentro do portal de sua instituição. <%= link_to "Fale conosco.", contact_path, class: "show" %></p>
         </div>
       </li>
       <%# Relatórios Sob Demanda. %>
@@ -25,7 +25,7 @@
           <h3 class="landing-navigation-legend">Relatórios Sob Demanda</h3>
         </div>
         <div class="landing-service-body">
-          <p class="landing-service-message">Gráficos e dados gerados especialmente para as suas necessidades. <%= link_to "Fale conosco.", contact_path %></p>
+          <p class="landing-service-message">Gráficos e dados gerados especialmente para as suas necessidades. <%= link_to "Fale conosco.", contact_path, class: "show" %></p>
         </div>
       </li>
       <%# Portal de Cursos. %>
@@ -35,7 +35,7 @@
           <h3 class="landing-navigation-legend landing-navigation-legend-centralize">Portal de Cursos</h3>
         </div>
         <div class="landing-service-body">
-          <p class="landing-service-message">Divulgue seus Cursos através de um portal personalizado com sistema de comércio eletrônico incluso. <%= link_to "Fale conosco.", contact_path %></p>
+          <p class="landing-service-message">Divulgue seus Cursos através de um portal personalizado com sistema de comércio eletrônico incluso. <%= link_to "Fale conosco.", contact_path, class: "show" %></p>
         </div>
       </li>
       <%# Consultoria e Treinamento de R.H. %>
@@ -45,7 +45,7 @@
           <h3 class="landing-navigation-legend">Consultoria e Treinamento de R.H.</h3>
         </div>
         <div class="landing-service-body">
-          <p class="landing-service-message">Aumente a eficácia de seus gestores e professores através de qualificação profissional para empresas e consultoria técnica com os melhores especialistas em Educação a Distância. <%= link_to "Fale conosco.", contact_path %></p>
+          <p class="landing-service-message">Aumente a eficácia de seus gestores e professores através de qualificação profissional para empresas e consultoria técnica com os melhores especialistas em Educação a Distância. <%= link_to "Fale conosco.", contact_path, class: "show" %></p>
         </div>
       </li>
     </ul>
