Atualiza os links do rodapé com as novas seções.

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -19,7 +19,11 @@
               <%= link_to "Sobre o Redu", home_path(anchor: "") %>
             </li>
             <li>
-              <%= link_to "Segmentos", home_path(anchor: "segmentos"),
+              <%= link_to "Como Funciona?", home_path(anchor: "como-funciona"),
+                class: "landing-scroll" %>
+            </li>
+            <li>
+              <%= link_to "Quanto Custa?", home_path(anchor: "quanto-custa"),
                 class: "landing-scroll" %>
             </li>
             <li>
@@ -31,7 +35,7 @@
                 class: "landing-scroll" %>
             </li>
             <li>
-              <%= link_to "Planos", home_path(anchor: "planos"),
+              <%= link_to "Mais Serviços", home_path(anchor: "mais-servicos"),
                 class: "landing-scroll" %>
             </li>
             <li>
