--- a/app/views/base/site_index.html.erb
+++ b/app/views/base/site_index.html.erb
@@ -8,7 +8,7 @@
     <%= render "landing/filters" %>
     <hr id="como-funciona" class="list-separator"/>
     <%= render "landing/how" %>
-    <hr id="custo" class="list-separator"/>
+    <hr id="quanto-custa" class="list-separator"/>
     <%= render "landing/cost" %>
     <hr id="vantagens" class="list-separator"/>
     <%= render "landing/advantages" %>
