--- a/app/assets/stylesheets/landing/_welcome.scss
+++ b/app/assets/stylesheets/landing/_welcome.scss
@@ -10,6 +10,7 @@
   $background-image-height: 480px;
   height: $background-image-height;
   background: transparent image-url('landing/background-welcome.jpg') no-repeat center;
+  background-size: cover;
   text-align: center;
 }
 
