--- a/app/assets/stylesheets/landing/_how.scss
+++ b/app/assets/stylesheets/landing/_how.scss
@@ -15,6 +15,8 @@
   .landing-navigation-legend { margin-top: 20px; }
 
   .landing-navigation-legend { font-weight: 100; }
+
+  .landing-how:hover & .landing-navigation-legend { color: $black; }
 }
 
 // Ambiente de Aprendizagem.
