Altera o texto do curso público, adiciona ícones escuros de curso público e privado e adiciona um overlay.

--- a/app/views/landing/_how.html.erb
+++ b/app/views/landing/_how.html.erb
@@ -16,14 +16,18 @@
   </div>
   <div class="landing-how-courses-types clearfix">
     <div class="pull-left">
-      <span class="landing-how-course-icon sprite-icon-course-public-green1_32_34 text-replacement pull-right">Cursos Abertos</span>
+      <span class="landing-how-course-icon sprite-icon-course-public-green3_32_34 pull-right">
+        <span class="landing-how-course-icon-overlay text-replacement">Cursos Abertos</span>
+      </span>
       <div class="landing-how-course-public pull-right">
         <h4 class="landing-navigation-legend">Cursos Abertos</h4>
-        <p class="landing-navigation-message">São gratuitos para quem cria e quem participa. Não há limite de usuários que podem ser inscritos e todas as funcionalidades do Redu estão presentes aqui. Seja reconhecido por milhares de alunos.</p>
+        <p class="landing-navigation-message">São gratuitos para quem cria e quem participa. Não há limite de usuários que podem ser inscritos e todas as funcionalidades do Redu estão presentes aqui. Seja reconhecido por milhares de alunos e crie Cursos Abertos.</p>
       </div>
     </div>
     <div class="pull-right">
-      <span class="landing-how-course-icon sprite-icon-course-private-red1_32_34 text-replacement pull-left">Cursos Privados</span>
+      <span class="landing-how-course-icon sprite-icon-course-private-red2_32_34 pull-left">
+        <span class="landing-how-course-icon-overlay text-replacement">Cursos Privados</span>
+      </span>
       <div class="landing-how-course-private pull-left">
         <h4 class="landing-navigation-legend">Cursos Privados</h4>
         <p class="landing-navigation-message">São moderados e de conteúdo totalmente privado e seguro — só quem você permitir terá acesso aos materiais e discussões. Além disso, você terá espaço de sobra para armazenar seus arquivos.</p>
