--- a/app/assets/stylesheets/landing/_how.scss
+++ b/app/assets/stylesheets/landing/_how.scss
@@ -55,3 +55,14 @@
 
   .landing-navigation-legend { color: $red2; }
 }
+
+.landing-how-course-icon { position: relative; }
+
+.landing-how-course-icon-overlay {
+  @include square(100%);
+  position: absolute;
+  display: inline-block;
+  background-color: rgba(255, 255, 255, 0.5);
+
+  .landing-navigation-message-hover:hover & { background-color: transparent; }
+}
